--- a/css/animate.css
+++ b/css/animate.css
@@ -573,12 +573,12 @@
 @keyframes fadeInDown {
   from {
     opacity: 0;
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(-50%, -100%, 0);
   }
 
   to {
     opacity: 1;
-    transform: none;
+    transform: translate3d(-50%, 0, 0);
   }
 }
 
